ecmascript/parser/tests/test262-error-references/fail/8b6b9c72c875f0d8.js.stderr
error: Expected RParen, got Some(Comma)
 --> $DIR/tests/test262-parser/fail/8b6b9c72c875f0d8.js:1:14
  |
1 | ({ set prop(x, y) {} })
  |              ^

